--- a/css/index.css
+++ b/css/index.css
@@ -1,15 +1,23 @@
 body{
-    background-color: red;
+    background-image: url('https://i.pinimg.com/originals/d7/f5/ae/d7f5ae1d7a361c1f84b62b1499d6cc56.jpg');
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 main{
-    background-color: black;
-    height: 650px;
+    background-color: rgba(255, 255, 255, 0.5);
 }
 table{
     background-color: white;
 }
 h1{
-    color: white;
+    color: black;
+    background-color: rgba(255, 255, 255, 0.3);
 }
 td{
     border: solid 2px;
@@ -18,6 +26,10 @@ td{
     text-align: end;
     border-color: black;
 }
+main>div{
+    height: 400px;
+    background-color: white;
+}
 .mesyanyo{
     width: 2000px;
 }
@@ -25,5 +37,30 @@ td{
     color: rgb(192, 192, 192);
 }
 .seleccionado{
-    background-color: rgb(0, 255, 255);
+    background-color: antiquewhite;
+}
+.azul{
+    color: rgb(82, 82, 255);
+}
+.contenedor-tareas{
+    height: 225px;
+    overflow-y: scroll;
+}
+.bloque-tarea>h1,.bloque-tarea>strong{
+    height: fit-content;
+}
+.tarea{
+    height: 8vh;
+    background-color: antiquewhite;
+}
+.tarea>i{
+    font-size: 25px;
+}
+.tarea>i:hover{
+    background-color: red;
+    color: white;
+    transition: 0.2s;
+}
+.fechaTareas{
+    font-size: 14px;
 }
