--- a/css/index.css
+++ b/css/index.css
@@ -20,6 +20,7 @@ h1{
     background-color: rgba(255, 255, 255, 0.3);
 }
 td{
+    position: relative;
     border: solid 2px;
     width: 120px;
     padding-bottom: 40px;
@@ -63,4 +64,9 @@ main>div{
 }
 .fechaTareas{
     font-size: 14px;
+}
+td>span{
+    position: absolute;
+    top: 0;
+    left: 0;
 }
